test/parser/template/042.hac
// "042.hac" should fail, no default relaxed parameters
//	template formals.  

template <pint Q><pint R=5>
defproc foo();

